--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "compression": "^1.7.2",
     "express": "^4.16.2",
     "morgan": "^1.9.0",
-    "prerender": "https://github.com/netlify/chrome-prerender#00bd156f665f2d0d23c32dff5556093b3a3b2c41"
+    "prerender": "https://github.com/netlify/chrome-prerender#00bd156f665f2d0d23c32dff5556093b3a3b2c41",
+    "prerender-memory-cache": "^1.0.2",
+    "prerender-redis-cache": "^0.2.0"
   },
   "bin": {
     "prerender": "server.js"
